--- a/bizdemo/easy_note/docker-compose.yml
+++ b/bizdemo/easy_note/docker-compose.yml
@@ -26,9 +26,11 @@ services:
       - MYSQL_PASSWORD=gorm
       - MYSQL_RANDOM_ROOT_PASSWORD="yes"
   Etcd:
-    image: 'bitnami/etcd:latest'
+    image: "quay.io/coreos/etcd:v3.5.5"
     environment:
-      - ALLOW_NONE_AUTHENTICATION=yes
+      - ETCD_LISTEN_CLIENT_URLS=http://0.0.0.0:2379
+      - ETCD_ADVERTISE_CLIENT_URLS=http://0.0.0.0:2379
+      - ETCDCTL_API=3
     ports:
       - 2379:2379
   jaeger:
