--- a/bizdemo/easy_note/docker-compose.yml
+++ b/bizdemo/easy_note/docker-compose.yml
@@ -18,6 +18,8 @@ version: '3'
 services:
   mysql:
     image: 'mysql:latest'
+    volumes:
+      - ./pkg/configs/sql:/docker-entrypoint-initdb.d
     ports:
       - 9910:3306
     environment:
