fix: fix Makefile in bizdemo/easy_note/cmd/user and bizdemo/easy_note/cmd/note (#61)
Co-authored-by: kinggo <lilong.21@bytedance.com>

--- a/bizdemo/easy_note/cmd/note/Makefile
+++ b/bizdemo/easy_note/cmd/note/Makefile
@@ -1,2 +1,3 @@
 server:
-	kitex -service demonote ../../idl/note.thrift
+	cd ../.. && kitex  idl/note.thrift
+	kitex -service demonote -use github.com/cloudwego/kitex-examples/biz-demo/easy_note/kitex_gen ../../idl/note.thrift
