--- a/bizdemo/easy_note/cmd/user/Makefile
+++ b/bizdemo/easy_note/cmd/user/Makefile
@@ -1,2 +1,2 @@
 server:
-	kitex -I ../../idl/ -type protobuf -service  demouser ../../idl/user.proto
+	kitex -I ../../idl/ -type protobuf -service  demouser -use github.com/cloudwego/kitex-examples/biz-demo/easy_note/kitex_gen ../../idl/user.proto
