chore: update otel-collector-config.yaml (#78)

--- a/opentelemetry/otel-collector-config.yaml
+++ b/opentelemetry/otel-collector-config.yaml
@@ -9,8 +9,8 @@ exporters:
 
   logging:
 
-  jaeger:
-    endpoint: jaeger-all-in-one:14250
+  otlp/jaeger:
+    endpoint: jaeger-all-in-one:4317
     tls:
       insecure: true
 
@@ -30,7 +30,7 @@ service:
     traces:
       receivers: [ otlp ]
       processors: [ batch ]
-      exporters: [ logging, jaeger ]
+      exporters: [ logging, otlp/jaeger ]
     metrics:
       receivers: [ otlp ]
       processors: [ batch ]
