--- a/opentelemetry/docker-compose.yaml
+++ b/opentelemetry/docker-compose.yaml
@@ -19,14 +19,14 @@ services:
 
   # Jaeger
   jaeger-all-in-one:
+    container_name: jaeger-all-in-one
     image: jaegertracing/all-in-one:latest
     environment:
       - COLLECTOR_OTLP_ENABLED=true
     ports:
       - "16686:16686"
-      - "14268"
-      - "14250:14250"
       - "6831:6831"
+      - "4317"
 
   # Victoriametrics
   victoriametrics:
