feat: add kitex_ent example (#104)

--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -13,5 +13,6 @@ header:
     - '**/kitex_gen/**'
     - 'kitex/**'
     - 'grpc_multi_service/kitex_gen/**'
+    - 'bizdemo/kitex_ent/ent/**'
 
   comment: on-failure
